# xgrammar

./: .clang-format  .cmake-format.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  .yamlfmt  CMakeLists.txt  README.md  grammar_functor.cc  pyproject.toml  todo  version.py  xmake.lua
.github/workflows/: benchmark.yaml  build_and_release.yaml  close_issues.yaml  documentation.yaml  tmate.yaml  unit_test.yaml  wheel_mac.yaml  wheel_manylinux.yaml  wheel_windows.yaml
benchmark/: README.md  bench_grammar_compile_mask_gen.py
cmake/: config.cmake
cpp/: compiled_grammar.cc  compiled_grammar_data_structure.h  compiled_grammar_impl.h  compiler.cc  config.cc  earley_parser.cc  earley_parser.h  ebnf_script_creator.cc  ebnf_script_creator.h  fsm.cc  fsm.h  fsm_builder.cc  fsm_builder.h  function_calling.cc  grammar.cc  grammar_ast.h  grammar_builder.h  grammar_cached_compiler.h  grammar_compiler.cc  grammar_data_structure.h  grammar_functor.cc  grammar_functor.h  grammar_impl.h  grammar_matcher.cc  grammar_matcher_base.cc  grammar_matcher_base.h  grammar_matcher_data_structure.h  grammar_matcher_preproc.h  grammar_matcher_state.h  grammar_parser.cc  grammar_parser.h  grammar_printer.cc  grammar_printer.h  grammar_serializer.cc  grammar_serializer.h  grammar_state_matcher.cc  grammar_state_matcher_base.h  grammar_state_matcher_preproc.h  grammar_state_matcher_state.h  json_schema_converter.cc  (+20 more)
cpp/kernels/: CMakeLists.txt  apply_token_mask_inplace.cu  kernels.h
cpp/nanobind/: CMakeLists.txt  nanobind.cc  python_methods.cc  python_methods.h
cpp/pybind/: CMakeLists.txt  pybind.cc  python_methods.cc  python_methods.h
cpp/support/: compact_2d_array.h  container.h  cpptrace.h  csr_array.h  dynamic_bitset.h  encoding.cc  encoding.h  int_set.h  json.h  json_serializer.h  logging.cc  logging.h  memory_size.h  recursion_guard.cc  recursion_guard.h  reflection.h  thread_pool.h  thread_safe_cache.h  union_find_set.h  utils.h
cpp/support/reflection/: json_serializer.h  reflection.h  reflection_details.h
docs/: Doxyfile  DoxygenLayout.xml  README.md  build_docs.sh  conf.py  generate_docs.sh  index.rst  requirements.txt  wrap_run_llm.py
docs/_static/css/: fix_text_selection.css
docs/api/python/: bitmask_ops.rst  compiled_grammar.rst  config.rst  configuration.rst  exception.rst  grammar.rst  grammar_compiler.rst  grammar_matcher.rst  index.rst  recursion_depth.rst  structural_tag.rst  structural_tag_item.rst  testing.rst  tokenizer_info.rst
docs/developer_guide/: building_docs.md  code_coverage.md
docs/how_to/: code_coverage.rst  ebnf_guided_generation.rst  engine_integration.rst  json_generation.rst  portable_api.rst
docs/misc/: runtime_safeguards.md
docs/start/: install.md  install.rst  installation.md  quick_start.md  quick_start.rst
docs/tutorials/: advanced_topics.md  constrained_decoding.md  ebnf_guided_generation.md  engine_integration.md  json_generation.md  json_generation.rst  structured_generation.rst  workflow_of_xgrammar.md
docs/xgrammar_features/: javascript_api.md  runtime_safeguards.md  serialization.md
examples/benchmark/: README.md  bench_apply_token_bitmask_inplace.py  bench_grammar_compile_mask_gen.py  cibench_grammar_compile_mask_gen.py
examples/hf_transformers/: transformers_example.py
include/xgrammar/: compiler.h  config.h  exception.h  function_calling.h  grammar.h  grammar_state_matcher.h  json_schema_converter.h  matcher.h  object.h  tokenizer_info.h  xgrammar.h
include/xgrammar/support/: encoding.h  logging.h  object.h
python/: pyproject.toml  requirements.txt  setup.py
python/xgrammar/: __init__.py  apply_token_bitmask_cpu.py  base.py  compiler.py  config.py  exception.py  grammar.py  matcher.py  structural_tag.py  testing.py  tokenizer_info.py  version.py  xgrammar.py
python/xgrammar/contrib/: hf.py  mlxlm.py
python/xgrammar/cuda/: apply_token_mask_inplace.py
python/xgrammar/kernels/: __init__.py  apply_token_bitmask_inplace_cpu.py  apply_token_bitmask_inplace_cuda.cu  apply_token_bitmask_inplace_cuda.py  apply_token_bitmask_inplace_torch_compile.py  apply_token_bitmask_inplace_triton.py  apply_token_bitmask_mlx.py
python/xgrammar/support/: logging.py
scripts/: build-environment.yaml  build_site.sh  build_xgrammar_lib_osx.sh  build_xgrammar_lib_win.bat  build_xgrammar_wheel_manylinux.sh  config.cmake  gh_deploy_site.sh  lint.sh  local_deploy_site.sh  release_new_version.sh  run_coverage.sh  run_ctest.sh  sync_package.py
site/: .gitignore  CNAME  _config.yml  index.md
site/_includes/: hero.html
tests/: README.md
tests/cpp/: test_dummy.cc  test_fsm.cc  test_fsm_builder.cc  test_parallel.cc  test_parser.cc  test_serialization.cc  test_thread_pool.cc  test_thread_safe_cache.cc  test_utils.h
tests/python/: test_builtin_grammar_json.py  test_builtin_grammar_json_schema.py  test_custom_grammar.py  test_function_calling.py  test_function_calling_converter.py  test_function_parser.py  test_grammar_compiler.py  test_grammar_matcher.py  test_grammar_matcher_basic.py  test_grammar_matcher_ebnf.py  test_grammar_matcher_init_context.py  test_grammar_matcher_json.py  test_grammar_matcher_json_schema.py  test_grammar_matcher_macro.py  test_grammar_matcher_regex.py  test_grammar_matcher_structural_tag.py  test_grammar_matcher_tag_dispatch.py  test_grammar_parser.py  test_grammar_parser_macro.py  test_grammar_state_matcher.py  test_grammar_union_concat.py  test_json_schema_converter.py  test_parser_structural_tag.py  test_recursion_depth.py  test_regex_converter.py  test_serialization.py  test_serializer.py  test_token_bitmask_operations.py  test_tokenizer.py  test_tokenizer_info.py  test_xg_tokenizer.py
web/: .eslintignore  .gitignore  README.md  build.sh  config.cmake  package-lock.json  package.json  rollup.config.js  run_test.sh  tsconfig.json
web/example/: package.json
web/example/src/: example.html  example.ts
web/src/: index.ts  xgrammar.ts  xgrammar_binding.cc
web/tests/: grammar.test.ts
